[project]
name = "rm-api"
version = "0.0.0+replaced-by-ci"
description = "A python library to handle interactions with the reMarkable API."
authors = [
    {name = "RedTTG",email = "red@redttg.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.3,<2.33.0)",
    "pypdf2 (>=3.0.1,<3.1.0)",
    "websocket-client (>=1.8.0,<1.9.0)",
    "crc32c (>=2.7.1,<2.8.0)",
    "httpx (>=0.27.2,<0.28.0)",
    "aiohttp (>=3.11.6,<3.12.0)",
    "pyjwt (>=2.9.0,<2.10.0)",
    "packaging (>=24.2,<25.0)",
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
requests = ">=2.32.3,<2.33.0"
pypdf2 = ">=3.0.1,<3.1.0"
websocket-client = ">=1.8.0,<1.9.0"
crc32c = ">=2.7.1,<2.8.0"
httpx = ">=0.27.2,<0.28.0"
aiohttp = ">=3.11.6,<3.12.0"
pyjwt = ">=2.9.0,<2.10.0"
packaging = ">=24.2,<25.0"
colorama = "^0.4.6"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
