[project]
name = "rm-api"
version = "0.0.0+replaced-by-ci"
description = "A python library to handle interactions with the reMarkable API."
authors = [
    {name = "RedTTG",email = "red@redttg.com"}
]
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3)",
    "pypdf2 (>=3.0.1)",
    "websocket-client (>=1.8.0)",
    "crc32c (>=2.7.1)",
    "httpx (>=0.27.2)",
    "aiohttp (>=3.11.6)",
    "pyjwt (>=2.9.0)",
    "packaging (>=24.2)",
    "colorama (>=0.4.6)",
    "sqlalchemy (>=2.0.44)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
requests = ">=2.32.5"
pypdf2 = ">=3.0.1"
websocket-client = ">=1.9.0"
crc32c = ">=2.8"
httpx = ">=0.28.1"
aiohttp = ">=3.13.3"
pyjwt = ">=2.12.1"
packaging = ">=26.0"
colorama = "^0.4.6"
pytest = "^9.0.2"
slashr = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
